--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -168,99 +168,128 @@
     "backToDashboard": "Back to Dashboard",
     "createNewOcrTask": "Create New OCR Task",
     "uploadAndConfigure": "Upload an image and configure OCR processing",
-    "manageTasks": "Manage Tasks",
-    "viewAndManageAllOcrTasks": "View and manage all OCR tasks",
-    "createNewTask": "Create New Task",
-    "searchTasks": "Search tasks...",
-    "allStatuses": "All statuses",
+    "videoEditor": "Video Editor",
+    "videoProjects": "Video Projects",
+    "manageVideoProjects": "Manage and track your video editing projects",
+    "createNewProject": "Create New Project",
+    "newProject": "New Project",
+    "projectTitle": "Project title",
+    "projectDescription": "Description (optional)",
+    "createProject": "Create Project",
+    "videoTasks": "Video Tasks",
+    "videoTasksTitle": "Video Tasks",
+    "totalProjects": "Total Projects",
+    "processingProjects": "Processing",
+    "completedProjects": "Completed",
+    "draftProjects": "Draft",
+    "searchProjects": "Search projects...",
+    "allStatus": "All Status",
+    "viewDetails": "View Details",
+    "noProjectsFound": "No projects found",
+    "adjustFiltersOrSearch": "Try adjusting your search or filters",
+    "createFirstProject": "Create your first video project to get started",
+    "createFirstVideoProject": "Create First Project",
+    "chooseYourPlan": "Choose Your Plan",
+    "unlockPowerfulFeatures": "Unlock powerful video editing features and take your content to the next level",
+    "videosProcessed": "Videos Processed",
+    "supportAvailable": "Support Available",
+    "uptimeGuarantee": "Uptime Guarantee",
+    "whatsIncluded": "What's included:",
+    "getLifetimeAccess": "Get Lifetime Access",
+    "startFreeTrial": "Start Free Trial",
+    "mostPopular": "Most Popular",
+    "bestValue": "Best Value",
+    "oneTimePayment": "One-time payment",
+    "frequentlyAskedQuestions": "Frequently Asked Questions",
+    "canChangePlanAnytime": "Can I change my plan anytime?",
+    "canChangePlanAnswer": "Yes, you can upgrade or downgrade your plan at any time. Changes take effect immediately.",
+    "isThereFreeTrial": "Is there a free trial?",
+    "freeTrialAnswer": "All paid plans come with a 7-day free trial. No credit card required to start.",
+    "whatPaymentMethods": "What payment methods do you accept?",
+    "paymentMethodsAnswer": "We accept all major credit cards, PayPal, and local payment methods like MoMo.",
+    "canCancelAnytime": "Can I cancel anytime?",
+    "cancelAnytimeAnswer": "Yes, you can cancel your subscription at any time. Your access continues until the end of the billing period.",
+    "proUser": "Pro User",
+    "standardUser": "Standard User",
+    "editProfile": "Edit Profile",
+    "editCover": "Edit Cover",
+    "joined": "Joined",
+    "quickActions": "Quick Actions",
+    "updatePersonalInfo": "Update your personal information",
+    "managePrivacySecurity": "Manage privacy and security",
+    "configureAlertsEmails": "Configure alerts and emails",
+    "passwordAnd2FA": "Password and 2FA settings",
+    "accountDetails": "Account Details",
+    "email": "Email",
+    "accountType": "Account Type",
+    "emailVerified": "Email Verified",
+    "verified": "Verified",
     "pending": "Pending",
-    "processing": "Processing",
-    "completed": "Completed",
-    "failed": "Failed",
-    "view": "View",
-    "noTasksFound": "No tasks found",
-    "adjustFiltersOrSearch": "Try adjusting filters or search terms",
-    "noTasksYet": "Start by creating your first OCR task",
-    "totalTasks": "Total",
-    "accuracy": "Accuracy",
-    "taskInformation": "Task Information",
-    "taskTitle": "Task Title",
-    "taskTitleRequired": "Task Title *",
-    "enterTaskTitle": "Enter task title...",
-    "description": "Description",
-    "descriptionOptional": "Description (Optional)",
-    "describeTask": "Describe the content or purpose of this task...",
-    "processingOptions": "Processing Options",
-    "enableLlmCorrection": "Enable LLM text correction",
-    "generateTts": "Generate Text-to-Speech audio",
-    "autoProcessAfterUpload": "Start processing immediately after upload",
-    "imageUploadTitle": "Image Upload",
-    "preview": "Preview",
-    "selectedFile": "Selected File",
-    "name": "Name",
-    "size": "Size",
-    "type": "Type",
-    "saveAsDraft": "Save as Draft",
-    "createAndProcessTask": "Create & Process Task",
-    "uploading": "Uploading...",
-    "processing": "Processing...",
-    "uploadingImage": "Uploading image...",
-    "processingWithAi": "Processing with AI...",
-    "pleaseWaitUploading": "Please wait while we upload your image",
-    "runningOcrLlmTts": "Running OCR, LLM correction, and TTS generation",
-    "manageTasks": "Manage Tasks",
-    "viewAndManageAllOcrTasks": "View and manage all OCR tasks",
-    "createNewTask": "Create New Task",
-    "searchTasks": "Search tasks...",
-    "allStatuses": "All statuses",
-    "pending": "Pending",
-    "processing": "Processing",
-    "completed": "Completed",
-    "failed": "Failed",
-    "view": "View",
-    "noTasksFound": "No tasks found",
-    "adjustFiltersOrSearch": "Try adjusting filters or search terms",
-    "noTasksYet": "Start by creating your first OCR task",
-    "totalTasks": "Total",
-    "accuracy": "Accuracy",
-    "created": "Created",
-    "file": "File",
-    "delete": "Delete",
-    "completedTasks": "Completed",
-    "processingTasks": "Processing",
-    "failedTasks": "Failed",
-    "hideEditor": "Hide Editor",
-    "showEditor": "Show Editor",
-    "download": "Download",
-    "share": "Share",
-    "ocrResults": "OCR Results",
-    "audioPlayback": "Audio Playback",
-    "processedText": "Processed Text",
-    "originalOcr": "Original (OCR)",
-    "correctedLlm": "Corrected (LLM)",
-    "noOriginalText": "No original text available",
-    "noCorrectedText": "No corrected text available",
-    "manualEditor": "Manual Editor",
-    "processingStatistics": "Processing Statistics",
-    "totalWords": "Total Words",
-    "processingTime": "Processing Time",
-    "fileSize": "File Size",
-    "taskNotFound": "Task not found",
-    "taskNotFoundMessage": "The requested task could not be found.",
-    "loadingTask": "Loading task...",
-    "createTaskAndOpen": "Create task and open details",
-    "startOcr": "Start OCR",
-    "images": "Images",
-    "pressStartOcr": "Press Start OCR to process images.",
-    "noOcrData": "No OCR data available.",
-    "downloadSuccess": "Results downloaded successfully!",
-    "shareText": "Check out my OCR processing results",
-    "linkCopied": "Task link copied to clipboard!",
-    "pleaseSelectImage": "Please select at least one image",
-    "pleaseEnterTaskTitle": "Please enter a task title",
-    "taskCreatedYouCanStart": "Task created. You can start OCR now.",
-    "draftNotImplemented": "Draft save functionality not implemented yet",
-    "failedToCreateTask": "Failed to create task"
+    "lastUpdated": "Last Updated",
+    "overview": "Overview",
+    "settings": "Settings",
+    "security": "Security",
+    "billing": "Billing",
+    "configureAccountPreferences": "Configure your account preferences and settings",
+    "managePasswordSecurity": "Manage your password and security settings",
+    "viewSubscriptionBilling": "View your subscription and billing information",
+    "videosProcessed": "Videos Processed",
+    "totalProjects": "Total Projects",
+    "storageUsed": "Storage Used",
+    "accountAge": "Account Age",
+    "professionalVideoEditing": "Professional video editing tools at your fingertips",
+    "vipUser": "VIP User",
+    "upgradeToVIP": "Upgrade to VIP",
+    "unlockPremiumFeatures": "Unlock Premium Features",
+    "upgradeToVipAccess": "Upgrade to VIP to access advanced editing tools, effects, and unlimited exports",
+    "viewPlans": "View Plans",
+    "uploadVideo": "Upload Video",
+    "startByUploadingVideo": "Start by uploading your video file",
+    "loadProject": "Load Project",
+    "continueWorkingProject": "Continue working on existing project",
+    "configureEditorPreferences": "Configure editor preferences",
+    "editorFeatures": "Editor Features",
+    "videoTrimming": "Video Trimming",
+    "cutTrimVideos": "Cut and trim your videos with precision",
+    "audioControls": "Audio Controls",
+    "adjustVolumeMusic": "Adjust volume, add music and sound effects",
+    "textOverlay": "Text Overlay",
+    "addTitlesCaptions": "Add titles, captions and custom text",
+    "filtersEffects": "Filters & Effects",
+    "applyStunningEffects": "Apply stunning visual effects and filters",
+    "multiLayerEditing": "Multi-layer Editing",
+    "workWithMultipleTracks": "Work with multiple video and audio tracks",
+    "imageOverlay": "Image Overlay",
+    "addLogosWatermarks": "Add logos, watermarks and images",
+    "vipOnly": "VIP Only",
+    "useFeature": "Use Feature",
+    "upgradeToUnlock": "Upgrade to Unlock",
+    "editorWorkspace": "Editor Workspace",
+    "videoEditingInterface": "The video editing interface will be available here. Upload a video or load an existing project to get started.",
+    "proTips": "Pro Tips",
+    "keyboardShortcuts": "Keyboard Shortcuts",
+    "keyboardShortcutsDesc": "Use Space to play/pause, J/K/L for timeline navigation",
+    "fileFormats": "File Formats",
+    "fileFormatsDesc": "Support for MP4, MOV, AVI, and more video formats",
+    "exportQuality": "Export Quality",
+    "exportQualityDesc": "Export in HD, Full HD, or 4K resolution (VIP only)",
+    "autoSave": "Auto-Save",
+    "autoSaveDesc": "Your projects are automatically saved every 5 minutes",
+    "hdVideoExport": "HD Video Export",
+    "basicEditingTools": "Basic Editing Tools",
+    "cloudStorage": "Cloud Storage",
+    "support247": "24/7 Support",
+    "fourKVideoExport": "4K Video Export",
+    "advancedFilters": "Advanced Filters",
+    "autoSubtitles": "Auto Subtitles",
+    "multiLanguageSupport": "Multi-language Support",
+    "priorityProcessing": "Priority Processing",
+    "advancedAnalytics": "Advanced Analytics",
+    "recentActivity": "Recent Activity",
+    "noRecentActivity": "No recent activity",
+    "startNewProject": "Start a new video project",
+    "uploadVideoDescription": "Upload and start editing",
+    "openEditorDescription": "Open video editing tools"
   },
 
   "OCR": {
@@ -416,7 +445,7 @@
       "completedStatus": "Completed",
       "failed": "Failed",
       "createdAsc": "Created (Oldest)",
-      "createdDesc": "Created (Newest)", 
+      "createdDesc": "Created (Newest)",
       "updatedDesc": "Updated (Recent)",
       "titleAsc": "Title (A-Z)",
       "titleDesc": "Title (Z-A)",
@@ -447,25 +476,25 @@
       "process": "Process",
       "download": "Download"
     },
-      "ocrDisplay": {
-        "title": "OCR Results",
-        "originalImage": "Original Image",
-        "extractedText": "Extracted Text",
-        "hideBoxes": "Hide Boxes",
-        "showBoxes": "Show Boxes",
-        "confidenceToggle": "Confidence: {state}",
-        "corrected": "Corrected",
-        "original": "Original",
-        "confidenceLabel": "Confidence",
-        "wordsLabel": "Words",
-        "copy": "Copy",
-        "correctedTextTitle": "Corrected Text",
-        "originalTextTitle": "Original Text",
-        "aiCorrected": "AI Corrected",
-        "ocrRaw": "OCR Raw",
-        "legend": { "high": "High confidence", "medium": "Medium confidence", "low": "Low confidence", "playing": "Currently playing" },
-        "confidence": "Confidence: {percent}%",
-        "processingTime": "Processing time: {time}",
+    "ocrDisplay": {
+      "title": "OCR Results",
+      "originalImage": "Original Image",
+      "extractedText": "Extracted Text",
+      "hideBoxes": "Hide Boxes",
+      "showBoxes": "Show Boxes",
+      "confidenceToggle": "Confidence: {state}",
+      "corrected": "Corrected",
+      "original": "Original",
+      "confidenceLabel": "Confidence",
+      "wordsLabel": "Words",
+      "copy": "Copy",
+      "correctedTextTitle": "Corrected Text",
+      "originalTextTitle": "Original Text",
+      "aiCorrected": "AI Corrected",
+      "ocrRaw": "OCR Raw",
+      "legend": { "high": "High confidence", "medium": "Medium confidence", "low": "Low confidence", "playing": "Currently playing" },
+      "confidence": "Confidence: {percent}%",
+      "processingTime": "Processing time: {time}",
       "wordCount": "Word count: {count}",
       "language": "Detected language: {lang}",
       "noResults": "No OCR results available",
