--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -168,94 +168,128 @@
     "backToDashboard": "Quay lại Dashboard",
     "createNewOcrTask": "Tạo nhiệm vụ OCR mới",
     "uploadAndConfigure": "Tải lên hình ảnh và cấu hình xử lý OCR",
-    "manageTasks": "Quản lý nhiệm vụ",
-    "viewAndManageAllOcrTasks": "Xem và quản lý tất cả các nhiệm vụ OCR",
-    "createNewTask": "Tạo nhiệm vụ mới",
-    "searchTasks": "Tìm kiếm nhiệm vụ...",
-    "allStatuses": "Tất cả trạng thái",
+    "videoEditor": "Trình chỉnh sửa video",
+    "videoProjects": "Dự án Video",
+    "manageVideoProjects": "Quản lý và theo dõi các dự án chỉnh sửa video của bạn",
+    "createNewProject": "Tạo dự án mới",
+    "newProject": "Dự án mới",
+    "projectTitle": "Tiêu đề dự án",
+    "projectDescription": "Mô tả (tùy chọn)",
+    "createProject": "Tạo dự án",
+    "videoTasks": "Nhiệm vụ video",
+    "videoTasksTitle": "Nhiệm vụ video",
+    "totalProjects": "Tổng dự án",
+    "processingProjects": "Đang xử lý",
+    "completedProjects": "Hoàn thành",
+    "draftProjects": "Nháp",
+    "searchProjects": "Tìm kiếm dự án...",
+    "allStatus": "Tất cả trạng thái",
+    "viewDetails": "Xem chi tiết",
+    "noProjectsFound": "Không tìm thấy dự án nào",
+    "adjustFiltersOrSearch": "Thử điều chỉnh tìm kiếm hoặc bộ lọc",
+    "createFirstProject": "Tạo dự án video đầu tiên để bắt đầu",
+    "createFirstVideoProject": "Tạo dự án đầu tiên",
+    "chooseYourPlan": "Chọn gói của bạn",
+    "unlockPowerfulFeatures": "Mở khóa các tính năng chỉnh sửa video mạnh mẽ và nâng tầm nội dung của bạn",
+    "videosProcessed": "Video đã xử lý",
+    "supportAvailable": "Hỗ trợ có sẵn",
+    "uptimeGuarantee": "Đảm bảo thời gian hoạt động",
+    "whatsIncluded": "Những gì bao gồm:",
+    "getLifetimeAccess": "Truy cập trọn đời",
+    "startFreeTrial": "Bắt đầu dùng thử miễn phí",
+    "mostPopular": "Phổ biến nhất",
+    "bestValue": "Giá trị tốt nhất",
+    "oneTimePayment": "Thanh toán một lần",
+    "frequentlyAskedQuestions": "Các câu hỏi thường gặp",
+    "canChangePlanAnytime": "Tôi có thể thay đổi gói bất cứ lúc nào không?",
+    "canChangePlanAnswer": "Có, bạn có thể nâng cấp hoặc hạ cấp gói của mình bất cứ lúc nào. Các thay đổi có hiệu lực ngay lập tức.",
+    "isThereFreeTrial": "Có dùng thử miễn phí không?",
+    "freeTrialAnswer": "Tất cả gói trả phí đều có 7 ngày dùng thử miễn phí. Không cần thẻ tín dụng để bắt đầu.",
+    "whatPaymentMethods": "Bạn chấp nhận những phương thức thanh toán nào?",
+    "paymentMethodsAnswer": "Chúng tôi chấp nhận tất cả các thẻ tín dụng chính, PayPal và các phương thức thanh toán địa phương như MoMo.",
+    "canCancelAnytime": "Tôi có thể hủy bất cứ lúc nào không?",
+    "cancelAnytimeAnswer": "Có, bạn có thể hủy đăng ký bất cứ lúc nào. Quyền truy cập của bạn sẽ tiếp tục đến hết chu kỳ thanh toán.",
+    "proUser": "Người dùng Pro",
+    "standardUser": "Người dùng thường",
+    "editProfile": "Chỉnh sửa hồ sơ",
+    "editCover": "Chỉnh sửa ảnh bìa",
+    "joined": "Tham gia",
+    "quickActions": "Thao tác nhanh",
+    "updatePersonalInfo": "Cập nhật thông tin cá nhân",
+    "managePrivacySecurity": "Quản lý quyền riêng tư và bảo mật",
+    "configureAlertsEmails": "Cấu hình cảnh báo và email",
+    "passwordAnd2FA": "Cài đặt mật khẩu và 2FA",
+    "accountDetails": "Chi tiết tài khoản",
+    "email": "Email",
+    "accountType": "Loại tài khoản",
+    "emailVerified": "Email đã xác minh",
+    "verified": "Đã xác minh",
     "pending": "Đang chờ",
-    "processing": "Đang xử lý",
-    "completed": "Hoàn thành",
-    "failed": "Thất bại",
-    "view": "Xem",
-    "noTasksFound": "Không tìm thấy nhiệm vụ nào",
-    "adjustFiltersOrSearch": "Thử thay đổi bộ lọc hoặc từ khóa tìm kiếm",
-    "noTasksYet": "Bắt đầu bằng cách tạo nhiệm vụ OCR đầu tiên",
-    "totalTasks": "Tổng số",
-    "accuracy": "Độ chính xác",
-    "taskInformation": "Thông tin nhiệm vụ",
-    "taskTitle": "Tiêu đề nhiệm vụ",
-    "taskTitleRequired": "Tiêu đề nhiệm vụ *",
-    "enterTaskTitle": "Nhập tiêu đề nhiệm vụ...",
-    "description": "Mô tả",
-    "descriptionOptional": "Mô tả (Tùy chọn)",
-    "describeTask": "Mô tả nội dung hoặc mục đích của nhiệm vụ này...",
-    "processingOptions": "Tùy chọn xử lý",
-    "enableLlmCorrection": "Bật tính năng sửa lỗi văn bản bằng LLM",
-    "generateTts": "Tạo âm thanh Text-to-Speech",
-    "autoProcessAfterUpload": "Bắt đầu xử lý ngay sau khi tải lên",
-    "imageUploadTitle": "Tải lên hình ảnh",
-    "preview": "Xem trước",
-    "selectedFile": "File đã chọn",
-    "name": "Tên",
-    "size": "Kích thước",
-    "type": "Loại",
-    "saveAsDraft": "Lưu bản nháp",
-    "createAndProcessTask": "Tạo và xử lý nhiệm vụ",
-    "uploading": "Đang tải lên...",
-    "processing": "Đang xử lý...",
-    "uploadingImage": "Đang tải lên hình ảnh...",
-    "processingWithAi": "Đang xử lý với AI...",
-    "pleaseWaitUploading": "Vui lòng đợi trong khi chúng tôi tải lên hình ảnh của bạn",
-    "runningOcrLlmTts": "Đang chạy OCR, sửa lỗi LLM và tạo TTS",
-    "created": "Tạo",
-    "file": "File",
-    "delete": "Xóa",
-    "completedTasks": "Hoàn thành",
-    "processingTasks": "Đang xử lý", 
-    "failedTasks": "Thất bại",
-    "hideEditor": "Ẩn trình chỉnh sửa",
-    "showEditor": "Hiện trình chỉnh sửa", 
-    "download": "Tải xuống",
-    "share": "Chia sẻ",
-    "ocrResults": "Kết quả OCR",
-    "audioPlayback": "Phát lại âm thanh",
-    "processedText": "Văn bản đã xử lý",
-    "originalOcr": "Bản gốc (OCR)",
-    "correctedLlm": "Đã sửa (LLM)",
-    "noOriginalText": "Không có văn bản gốc",
-    "noCorrectedText": "Không có văn bản đã sửa",
-    "manualEditor": "Trình chỉnh sửa thủ công",
-    "processingStatistics": "Thống kê xử lý",
-    "totalWords": "Tổng từ",
-    "processingTime": "Thời gian xử lý",
-    "fileSize": "Kích thước file",
-    "taskNotFound": "Không tìm thấy nhiệm vụ",
-    "taskNotFoundMessage": "Nhiệm vụ được yêu cầu không thể tìm thấy.",
-    "loadingTask": "Đang tải nhiệm vụ...",
-    "uploadMode": "Chế độ tải lên",
-    "single": "Đơn",
-    "multiple": "Nhiều",
-    "selectedFiles": "Files đã chọn",
-    "totalFiles": "Tổng số files",
-    "totalSize": "Tổng dung lượng",
-    "types": "Loại files",
-    "uploadingImages": "Đang tải lên hình ảnh",
-    "pleaseWaitUploadingMultiple": "Vui lòng đợi trong khi chúng tôi tải lên các hình ảnh của bạn...",
-    "runningOcrLlmTtsMultiple": "Đang chạy OCR, sửa lỗi LLM và tạo TTS cho tất cả hình ảnh...",
-    "createTaskAndOpen": "Tạo task và xem chi tiết",
-    "startOcr": "Bắt đầu xử lý OCR",
-    "images": "Hình ảnh",
-    "pressStartOcr": "Nhấn 'Bắt đầu xử lý OCR' để xử lý hình ảnh.",
-    "noOcrData": "Chưa có dữ liệu OCR.",
-    "downloadSuccess": "Tải kết quả thành công!",
-    "shareText": "Xem kết quả xử lý OCR của tôi",
-    "linkCopied": "Đã sao chép liên kết nhiệm vụ!",
-    "pleaseSelectImage": "Vui lòng chọn ít nhất một hình ảnh",
-    "pleaseEnterTaskTitle": "Vui lòng nhập tiêu đề nhiệm vụ",
-    "taskCreatedYouCanStart": "Đã tạo task. Bạn có thể bắt đầu OCR.",
-    "draftNotImplemented": "Chức năng lưu nháp chưa được hỗ trợ",
-    "failedToCreateTask": "Tạo task thất bại"
+    "lastUpdated": "Cập nhật lần cuối",
+    "overview": "Tổng quan",
+    "settings": "Cài đặt",
+    "security": "Bảo mật",
+    "billing": "Thanh toán",
+    "configureAccountPreferences": "Cấu hình tùy chọn tài khoản của bạn",
+    "managePasswordSecurity": "Quản lý mật khẩu và cài đặt bảo mật",
+    "viewSubscriptionBilling": "Xem thông tin đăng ký và thanh toán",
+    "videosProcessed": "Video đã xử lý",
+    "totalProjects": "Tổng dự án",
+    "storageUsed": "Lưu trữ đã sử dụng",
+    "accountAge": "Tuổi tài khoản",
+    "professionalVideoEditing": "Các công cụ chỉnh sửa video chuyên nghiệp trong tầm tay",
+    "vipUser": "Người dùng VIP",
+    "upgradeToVIP": "Nâng cấp lên VIP",
+    "unlockPremiumFeatures": "Mở khóa tính năng cao cấp",
+    "upgradeToVipAccess": "Nâng cấp lên VIP để truy cập các công cụ chỉnh sửa nâng cao, hiệu ứng và xuất không giới hạn",
+    "viewPlans": "Xem gói",
+    "uploadVideo": "Tải video lên",
+    "startByUploadingVideo": "Bắt đầu bằng cách tải tệp video của bạn lên",
+    "loadProject": "Tải dự án",
+    "continueWorkingProject": "Tiếp tục làm việc với dự án hiện có",
+    "configureEditorPreferences": "Cấu hình tùy chọn trình chỉnh sửa",
+    "editorFeatures": "Tính năng chỉnh sửa",
+    "videoTrimming": "Cắt video",
+    "cutTrimVideos": "Cắt và trim video của bạn một cách chính xác",
+    "audioControls": "Điều khiển âm thanh",
+    "adjustVolumeMusic": "Điều chỉnh âm lượng, thêm nhạc và hiệu ứng âm thanh",
+    "textOverlay": "Lớp phủ văn bản",
+    "addTitlesCaptions": "Thêm tiêu đề, phụ đề và văn bản tùy chỉnh",
+    "filtersEffects": "Bộ lọc & Hiệu ứng",
+    "applyStunningEffects": "Áp dụng hiệu ứng hình ảnh và bộ lọc tuyệt đẹp",
+    "multiLayerEditing": "Chỉnh sửa đa lớp",
+    "workWithMultipleTracks": "Làm việc với nhiều track video và âm thanh",
+    "imageOverlay": "Lớp phủ hình ảnh",
+    "addLogosWatermarks": "Thêm logo, watermark và hình ảnh",
+    "vipOnly": "Chỉ dành cho VIP",
+    "useFeature": "Sử dụng tính năng",
+    "upgradeToUnlock": "Nâng cấp để mở khóa",
+    "editorWorkspace": "Không gian làm việc",
+    "videoEditingInterface": "Giao diện chỉnh sửa video sẽ có sẵn tại đây. Tải lên video hoặc mở dự án hiện có để bắt đầu.",
+    "proTips": "Mẹo chuyên nghiệp",
+    "keyboardShortcuts": "Phím tắt",
+    "keyboardShortcutsDesc": "Sử dụng Space để phát/tạm dừng, J/K/L để điều hướng timeline",
+    "fileFormats": "Định dạng tệp",
+    "fileFormatsDesc": "Hỗ trợ MP4, MOV, AVI và nhiều định dạng video khác",
+    "exportQuality": "Chất lượng xuất",
+    "exportQualityDesc": "Xuất ở độ phân giải HD, Full HD hoặc 4K (chỉ VIP)",
+    "autoSave": "Tự động lưu",
+    "autoSaveDesc": "Dự án của bạn được tự động lưu mỗi 5 phút",
+    "hdVideoExport": "Xuất video HD",
+    "basicEditingTools": "Công cụ chỉnh sửa cơ bản",
+    "cloudStorage": "Lưu trữ đám mây",
+    "support247": "Hỗ trợ 24/7",
+    "fourKVideoExport": "Xuất video 4K",
+    "advancedFilters": "Bộ lọc nâng cao",
+    "autoSubtitles": "Phụ đề tự động",
+    "multiLanguageSupport": "Hỗ trợ đa ngôn ngữ",
+    "priorityProcessing": "Xử lý ưu tiên",
+    "advancedAnalytics": "Phân tích nâng cao",
+    "recentActivity": "Hoạt động gần đây",
+    "noRecentActivity": "Chưa có hoạt động gần đây",
+    "startNewProject": "Bắt đầu dự án video mới",
+    "uploadVideoDescription": "Tải lên và bắt đầu chỉnh sửa",
+    "openEditorDescription": "Mở công cụ chỉnh sửa video"
   },
 
   "OCR": {
@@ -406,7 +440,7 @@
       "sortBy": "Sắp xếp theo...",
       "allTasks": "Tất cả nhiệm vụ",
       "pending": "Chờ xử lý",
-      "processing": "Đang xử lý", 
+      "processing": "Đang xử lý",
       "completed": "Hoàn thành",
       "completedStatus": "Hoàn thành",
       "failed": "Thất bại",
